[WGSL] https://compute.toys/view/734 fails to compile https://bugs.webkit.org/show_bug.cgi?id=266638 rdar://119870669

Reviewed by Mike Wyrzykowski.

When using an alias for type conversion we need to update the target to the
resolved type.

* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):
* Source/WebGPU/WGSL/tests/valid/aliases.wgsl:

Canonical link: https://commits.webkit.org/272519@main